[project]
name = "hawc"
version = "2025.1"
description = "A content management system for human health assessments."
license = {file = "LICENSE"}
authors = [{name = "Andy Shapiro", email = "shapiromatron@gmail.com"}]
readme = "README.md"
keywords = [
  "data visualization",
  "epidemiology",
  "risk assessment",
  "systematic review",
  "toxicology",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.14"
# see https://peps.python.org/pep-0440/#version-specifiers
dependencies = [
  # web application
  "Django~=5.2.10",
  "django-crispy-forms==2.5",
  "crispy-bootstrap4==2025.6",
  "django-filter==25.2",
  "django-redis==6.0.0",
  "django-reversion==6.1.0",
  "django-autocomplete-light==3.12.1",
  "django-taggit==6.1.0",
  "django-treebeard==4.8.0",
  "djangorestframework==3.16.1",
  "drf-spectacular~=0.29.0",
  "django-vite==3.1.0",
  "uritemplate==4.2.0",
  "inflection==0.5.1",
  "pyyaml==6.0.3",
  "gunicorn==23.0.0",
  "wagtail~=7.2.0",
  "wagtail-draftail-anchors==0.7.0",
  # tasks
  "django-tasks==0.9.0",
  "django-crontask==0.1.1",
  # utilities
  "jsonschema==4.25.1",
  "lxml~=6.0.2",
  "psycopg2-binary==2.9.11",
  "redis==7.1.0",
  "requests~=2.32.5",
  "pydantic~=2.12.4",
  "nh3~=0.3.2",
  "tinycss2==1.5.1",
  # computational
  "numpy~=2.3.5",
  "pandas==2.3.3",
  "openpyxl==3.1.5",
  "jinja2~=3.1.6",
  "plotly==6.5.0",
  "scipy~=1.16.3",
  "pybmds==25.1",
  # exports
  "rispy==0.10.0",
  "python-docx==1.2.0",
]

[project.optional-dependencies]
dev = [
  # build
  "poethepoet~=0.39.0",
  # lint and formatting tools
  "ruff==0.14.10",
  "djhtml==3.0.10",
  # django development
  "django-debug-toolbar~=6.1.0",
  "django-browser-reload~=1.21.0",
  "django-extensions~=4.1",
  # tests
  "coverage~=7.13.1",
  "pytest~=9.0.1",
  "pytest-django~=4.11.1",
  "vcrpy==8.1.1",
  "pytest-recording==0.13.4",
  "playwright~=1.57.0",
  "pytest-playwright~=0.7.1",
]
docs = [
  "mkdocs-material~=9.7.0",
]
prod = [
  "django-anymail~=14.0",
  "sentry_sdk~=2.48.0",
]

[project.scripts]
manage = "hawc:manage"
"manage.py" = "hawc:manage"

[project.urls]
Documentation = "https://hawc.readthedocs.io/"
Source = "https://github.com/shapiromatron/hawc"

# --- --- --- --- --- --- --- --- --- --- BUILD --- --- --- --- --- --- --- --- --- ---
[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
source-include = [
  "hawc/**/*",
  "hawc/static/bundles/**/*",
  "hawc/gitcommit.json",
]
source-exclude = [
  "hawc/main/settings/local.py",
]

# --- --- --- --- --- --- --- --- --- --- FORMAT --- --- --- --- --- --- --- --- --- ---
[tool.ruff]
line-length = 100
target-version = "py313"
lint.select = ["F", "E", "W", "I", "UP", "S", "B", "T20", "RUF"]
lint.ignore = ["E501", "S308", "S314", "S603", "RUF012", "RUF015"]
lint.unfixable = ["F401", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["hawc", "hawc_client"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "S106"]
"scripts/*.py" = ["T201"]
"scripts/*.ipynb" = ["T201"]
"**/management/**.py" = ["T201"]
"**/migrations/**.py" = ["T201"]

# --- --- --- --- --- --- --- --- --- --- TEST --- --- --- --- --- --- --- --- --- ---
[tool.pytest.ini_options]
addopts = "--ds=hawc.main.settings.unittest --record-mode=once --reuse-db --nomigrations"
testpaths = [
  "tests/hawc",
  "tests/integration",
  "tests/client",
]

[tool.coverage.run]
omit = [
  "*migrations*",
  "./build/",
  "./client/hawc_client/interactive.py",
  "./hawc/apps/*/management/*",
  "./hawc/main/*",
  "./scripts/private/*",
  "./tests/*",
  "./venv/*",
]

[tool.coverage.report]
fail_under=92.0
precision=1

# --- --- --- --- --- --- --- --- --- --- TASKS --- --- --- --- --- --- --- --- --- ---
[tool.poe.executor]
type = "virtualenv"

[tool.poe.tasks.sync-dev]
help = "Sync dev environment after code checkout"
sequence = [
  {cmd = 'uv pip install -e ".[dev,docs]"'},
  {cmd = "uv pip install -e client"},
  {cmd = "yarn --cwd frontend"},
  {cmd = "python manage.py migrate"},
  {cmd = "python manage.py recreate_views"},
]

[tool.poe.tasks.run-py]
help = "Run python developer environment"
cmd = "python manage.py runserver"

[tool.poe.tasks.run-js]
help = "Run javascript developer environment"
cmd = "npm --prefix ./frontend run start"

[tool.poe.tasks.test]
help = "Run python tests"
cmd = "py.test"

[tool.poe.tasks.test-integration]
help = "Run integration tests (requires `npm run start`)"
sequence = [
  {cmd = "playwright install --with-deps chromium"},
  {shell = "INTEGRATION_TESTS=1 py.test -sv tests/integration/"},
]

[tool.poe.tasks.test-integration-debug]
help = "Run integration tests in debug mode (requires `npm run start`)"
sequence = [
  {cmd = "playwright install --with-deps chromium"},
  {shell = "INTEGRATION_TESTS=1 PWDEBUG=1 py.test -sv tests/integration/"},
]

[tool.poe.tasks.test-js]
help = "Run javascript tests"
cmd = "npm --prefix ./frontend run test"

[tool.poe.tasks.format]
help = "Fix formatting issues where possible"
sequence = ["format-py", "format-js", "format-html"]

[tool.poe.tasks.format-py]
help = "Fix python formatting issues where possible"
sequence = [
  {cmd = "ruff format ."},
  {cmd = "ruff check . --fix --show-fixes"},
]

[tool.poe.tasks.format-js]
help = "Fix javascript formatting issues where possible"
cmd = "npm --prefix ./frontend run format"

[tool.poe.tasks.format-html]
help = "Fix HTML formatting issues where possible"
env = { PYTHONUTF8 = "1" }  # see https://github.com/rtts/djhtml/issues/122
cmd = "djhtml --tabwidth 2 hawc/"

[tool.poe.tasks.lint]
help = "Check formatting issues"
sequence = ["lint-py", "lint-js", "lint-html"]

[tool.poe.tasks.lint-py]
help = "Check python formatting issues"
sequence = [
  {cmd = "ruff format . --check"},
  {cmd = "ruff check ."},
]

[tool.poe.tasks.lint-js]
help = "Check javascript formatting issues"
cmd = "npm --prefix ./frontend run lint"

[tool.poe.tasks.lint-html]
help = "Check HTML formatting issues where possible"
cmd = "djhtml --tabwidth 2 --check hawc/"

[tool.poe.tasks.build]
help = "Build package"
sequence = [
  {cmd = "npm --prefix ./frontend run build"},
  {cmd = "python manage.py set_git_commit"},
  {cmd = "uv build --wheel --clear"},
]

[tool.poe.tasks.coverage]
help = "Run python coverage and create HTML report"
sequence = [
  {cmd = "coverage run -m pytest"},
  {cmd = "coverage html -d coverage_html -i"},
]

[tool.poe.tasks.loc]
help = "Generate lines of code report"
cmd = """cloc \
		--exclude-dir=migrations,node_modules,public,private,vendor,venv \
		--exclude-ext=json,yaml,svg,toml,ini \
		--vcs=git \
		--counted loc-files.txt \
		--md \
		.
"""

[tool.poe.tasks.docs]
help = "Build documentation"
cwd = "docs"
cmd = "mkdocs build --strict"

[tool.poe.tasks.docs-serve]
help = "Run documentation server"
cwd = "docs"
cmd = "mkdocs serve -a localhost:8010"
