[metadata]
name = hawc
version = 2023.1
description = A content management system for human health assessments.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://hawcproject.org
author = Andy Shapiro
author_email = shapiromatron@gmail.com
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.9

[options]
include_package_data = true
packages = hawc
python_requires = >=3.9

[options.entry_points]
console_scripts =
    manage.py = hawc:manage
    manage = hawc:manage
