[project]
name = "hawc-client"
license = {file = "LICENSE"}
authors = [{name = "Andy Shapiro", email = "shapiromatron@gmail.com"}]
dynamic = ["version", "description"]
readme = "README.md"
keywords = [
  "data visualization",
  "epidemiology",
  "risk assessment",
  "systematic review",
  "toxicology",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
  "rapidfuzz",
  "requests",
  "pandas",
  "playwright",
  "tqdm",
]

[project.urls]
"Bug Tracker" = "https://github.com/shapiromatron/hawc/issues"
Documentation = "https://hawc.readthedocs.io/client/"
"Source Code" = "https://github.com/shapiromatron/hawc"

[build-system]
requires = ["flit_core ~=3.9"]
build-backend = "flit_core.buildapi"
