[project]
name = "hawc-client"
license = {file = "LICENSE"}
authors = [{name = "Andy Shapiro", email = "shapiromatron@gmail.com"}]
dynamic = ["version", "description"]
readme = "README.md"
keywords = [
  "data visualization",
  "epidemiology",
  "risk assessment",
  "systematic review",
  "toxicology",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
  "rapidfuzz",
  "requests",
  "pandas",
  "playwright",
  "tqdm",
]

[project.urls]
"Bug Tracker" = "https://github.com/shapiromatron/hawc/issues"
Documentation = "https://hawc.readthedocs.io/client/"
Changes = "https://hawc.readthedocs.io/latest/client/#changelog"
"Source Code" = "https://github.com/shapiromatron/hawc"

[build-system]
requires = ["flit_core~=3.12"]
build-backend = "flit_core.buildapi"

[tool.poe.tasks.build]
help = "Build package"
cmd = "uv build"

[tool.poe.tasks.upload-testpypi]
help = "Upload package to testpypi"
sequence = [
  "build",
  {cmd = "uv publish --publish-url=https://test.pypi.org/legacy/"},
]

[tool.poe.tasks.upload-pypi]
help = "Upload package to pypi"
sequence = [
  "build",
  {cmd = "uv publish"},
]
