[project]
name = "hawc-client"
version = "2025.1"
description = "A client for the Health Assessment Workspace Collaborative (HAWC)."
license = {file = "LICENSE"}
authors = [{name = "Andy Shapiro", email = "shapiromatron@gmail.com"}]
readme = "README.md"
keywords = [
  "data visualization",
  "epidemiology",
  "risk assessment",
  "systematic review",
  "toxicology",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = [
  "rapidfuzz",
  "requests",
  "pandas",
  "playwright",
  "tqdm",
]

[project.urls]
"Bug Tracker" = "https://github.com/shapiromatron/hawc/issues"
Documentation = "https://hawc.readthedocs.io/client/"
Changes = "https://hawc.readthedocs.io/latest/client/#changelog"
"Source Code" = "https://github.com/shapiromatron/hawc"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[tool.poe.tasks.build]
help = "Build package"
cmd = "uv build"

[tool.poe.tasks.upload-testpypi]
help = "Upload package to testpypi"
sequence = [
  "build",
  {cmd = "uv publish --publish-url=https://test.pypi.org/legacy/"},
]

[tool.poe.tasks.upload-pypi]
help = "Upload package to pypi"
sequence = [
  "build",
  {cmd = "uv publish"},
]
