[metadata]
name = hawc_client
version = 0.1
description = A python client for HAWC.
author = Daniel Rabstejnek
author_email = rabstejnek@gmail.com
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6


[options]
packages = hawc_client
install_requires =
    requests
    pandas
    tqdm
