[metadata]
description = A client for the Health Assessment Workspace Collaborative (HAWC)
long_description = Documentation available at https://hawc.readthedocs.io/.
long_description_content_type = text/x-rst
license = MIT
maintainer = The HAWC development team
maintainer_email = shapiromaron@gmail.com
name = hawc-client
version = 2021.12
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
platform = any
url = https://github.com/shapiromatron/hawc
project_urls =
    Bug Tracker = https://github.com/shapiromatron/hawc/issues
    Documentation = https://hawc.readthedocs.io/
    Source Code = https://github.com/shapiromatron/hawc

[options]
packages = hawc_client
python_requires = >=3.9
install_requires =
    requests
    pandas
    tqdm

[check]
metadata = true
restructuredtext = true
strict = true
